--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,15 @@ Style sheet for general classes used through out the website
 
 body{
   font-family: roboto, sans-serif;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   padding-left: 4rem;
-  color: #232323;
+  background-color: #232323;
+  color: white;
 }
 
 p{
   max-width: 60rem;
+  line-height: 2rem;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -30,7 +32,7 @@ h1{
 h2{
   font-size: 2.2rem;
   margin-bottom: 2rem;
-  color: #2967A6;
+  color: #3586D6;
 }
 h3{ font-size: 1.8rem; }
 h4{ font-size: 1.6rem; }
@@ -44,4 +46,16 @@ h6{ font-size: 1.2rem; }
 
 .logo-icon{
   max-width: 10rem;
+}
+
+.in-text-link{
+  text-decoration: underline;
+  color: white;
+  transition-duration: color;
+  transition-duration: 0.15s;
+}
+
+.in-text-link:hover{
+  text-decoration: underline;
+  color: #3586D6;
 }
