--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ h1{
 }
 
 h2{
-  font-size: 2.2rem;
+  font-size: 3rem;
   margin-bottom: 2rem;
   color: #3586D6;
 }
@@ -139,6 +139,7 @@ h6{ font-size: 1.2rem; }
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 1;
 }
 
 #side-nav a{
@@ -154,9 +155,19 @@ h6{ font-size: 1.2rem; }
   color: #3586D6;
 }
 
-
 .hidden{
   visibility: hidden;
+}
+
+/* Footer */
+footer{
+  margin-top: 8rem;
+  margin-bottom: 4rem;
+  font-size: 1rem;
+}
+
+footer a{
+  margin-right: 3rem;
 }
 
 /* Different sizes for images */
