--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 .hero-content-container{
-  background-image: url('../images/Lyra-full-map.png');
+  background-image: url('../images/Lyra/Lyra-full-map.png');
   position: relative;
   height: 100vh;
   width: 99vw;
@@ -9,7 +9,7 @@
   padding: 20rem 7rem 45rem 7rem;
   margin-bottom: 10rem;
   margin-left: -4rem;
-  
+
 }
 
 .hero-content-container h2{
