--- a/css/home.css
+++ b/css/home.css
@@ -2,17 +2,29 @@
   background-image: url('../images/Lyra/Lyra-full-map.png');
   position: relative;
   height: 100vh;
-  width: 99vw;
+  width: 100vw;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 20rem 7rem 45rem 7rem;
   margin-bottom: 10rem;
   margin-left: -4rem;
-
 }
 
 .hero-content-container h2{
   color: white;
   font-size: 7rem;
+}
+
+@media( max-width: 500px){
+
+  .hero-content-container h2{
+    font-size: 4.7rem;
+  }
+
+  .hero-content-container{
+    margin-left: -1.5rem;
+    padding-left: 4rem;
+  }
+
 }
