--- a/css/projects.css
+++ b/css/projects.css
@@ -18,3 +18,34 @@
   padding-left: 5rem;
   border-left: 4px solid white;
 }
+
+@media( max-width: 1050px){
+  .project-row-display.flex-container{
+    flex-direction: column;
+  }
+
+  .project-row-display section{
+    margin-bottom: 6rem;
+  }
+
+  .project-row-first{
+    padding-right: 1rem;
+  }
+
+  .project-row-second{
+    padding-left: 0rem;
+    border: none;
+  }
+
+  .project-row-display p{
+    max-width: 60rem;
+    margin-right: 1rem;
+  }
+
+  .project-row-display img{
+    max-width: 90%;
+    margin-right: 1rem;
+  }
+
+
+}
