--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,9 @@ h6{ font-size: 1.2rem; }
   transition: background-color 0.3s ease-out;
 }
 
-.image-as-link:hover{
+.image-as-link:hover,.image-as-link:hover{
   background-color: #41BBE0;
+  cursor: pointer;
 }
 
 /* Content with Image CSS*/
@@ -141,6 +142,7 @@ h6{ font-size: 1.2rem; }
   left: 0;
   top: 0;
   z-index: 1;
+  transform: translateX(-30rem);
 }
 
 #side-nav a{
