--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ h6{ font-size: 1.2rem; }
   transition-duration: 0.15s;
 }
 
-.in-text-link:hover{
+.in-text-link:hover, .in-text-link:focus{
   text-decoration: underline;
   color: #3586D6;
 }
@@ -106,7 +106,7 @@ h6{ font-size: 1.2rem; }
   transition: background-color 0.3s ease-out;
 }
 
-.image-as-link:hover,.image-as-link:hover{
+.image-as-link:hover, .image-as-link:focus{
   background-color: #41BBE0;
   cursor: pointer;
 }
@@ -154,7 +154,7 @@ h6{ font-size: 1.2rem; }
   transition: color 0.1s ease-out;
 }
 
-#side-nav a:hover{
+#side-nav a:hover, #side-nav a:focus{
   color: #3586D6;
 }
 
