--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,20 @@ h6{ font-size: 1.2rem; }
 
 .logo-icon{
   max-width: 10rem;
+  background-color: #41BBE0;
   align-self: flex-start;
+  position: absolute;
+}
+
+.logo-background{
+  background-color: #41BBE0;
+  width: 10rem;
+  height: auto;
+  position: relative;
+}
+
+#logo{
+  position: relative;
 }
 
 .flex-container{
@@ -103,7 +116,7 @@ h6{ font-size: 1.2rem; }
 
 /* Image as Link CSS*/
 .image-as-link{
-  transition: background-color 0.3s ease-out;
+  transition: background-color 0.3 ease-in;
 }
 
 .image-as-link:hover, .image-as-link:focus{
@@ -141,7 +154,7 @@ h6{ font-size: 1.2rem; }
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   transform: translateX(-30rem);
 }
 
