--- a/css/animation.css
+++ b/css/animation.css
@@ -18,10 +18,10 @@
 
 @keyframes pulse {
   0% {
-   transform: scale(1, 1);
+    background-color: #41BBE0;
   }
   100% {
-  transform: scale(1.17, 1.17);
+    background-color: #9548E0;
   }
 }
 
