--- a/css/style-guide.css
+++ b/css/style-guide.css
@@ -1,5 +1,6 @@
 .example-nav{
   padding-left: 4rem;
+  padding-right: 8rem;
   padding-top: 2rem;
   max-width: 30rem;
   height: 70rem;
@@ -11,10 +12,98 @@
   text-decoration: none;
   font-weight: bold;
   font-size: 4rem;
-  margin-bottom: 3rem;
+  margin-top: 3rem;
   transition: color 0.1s ease-out;
+}
+
+.hero-content-container{
+  background-image: url('../images/Lyra/Lyra-full-map.png');
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20rem 7rem 45rem 7rem;
+  margin-bottom: 10rem;
+  margin-left: -4rem;
+}
+
+.hero-content-container h2{
+  color: white;
+  font-size: 7rem;
+}
+
+.image-as-link{
+  max-width: 10rem;
 }
 
 .example-nav a:hover, .example-nav a:focus{
   color: #3586D6;
+}
+
+.project-row-display{
+
+}
+
+.project-row-display p{
+  max-width: 40vw;
+}
+
+.project-row-display h2, .project-row-display h3{
+  max-width: 50vw;
+}
+
+.project-row-display img{
+  max-width: 30vw;
+}
+
+.project-row-first{
+  padding-right: 5rem;
+}
+
+.project-row-second{
+  padding-left: 5rem;
+  border-left: 4px solid white;
+}
+
+@media( max-width: 1200px){
+  .project-row-display.flex-container{
+    flex-direction: column;
+  }
+
+  .project-row-display section{
+    margin-bottom: 6rem;
+  }
+
+  .project-row-first{
+    padding-right: 1rem;
+  }
+
+  .project-row-second{
+    padding-left: 0rem;
+    border: none;
+  }
+
+  .project-row-display p{
+    max-width: 60rem;
+    margin-right: 1rem;
+  }
+
+  .project-row-display img{
+    max-width: 90%;
+    margin-right: 1rem;
+  }
+}
+
+@media( max-width: 500px){
+
+  .hero-content-container h2{
+    font-size: 4.7rem;
+  }
+
+  .hero-content-container{
+    margin-left: -1.5rem;
+    padding-left: 2rem;
+  }
 }
